# beken_freertos_sdk

./: .gitignore  Makefile  README.md  application.mk  build.sh
beken378/: SConscript  beken.mk  beken_src.mk
beken378/alios/: flash_hal.c  mac_config.c  mac_config.h
beken378/alios/entry/: arch_main.c  boot_handlers.S
beken378/alios/os/: mem_arch.c
beken378/app/: app.c  app.h  ate_app.c  ate_app.h
beken378/app/config/: param_config.c  param_config.h  sys_config_bk7231.h  sys_config_bk7231n.h  sys_config_bk7231u.h  sys_config_bk7236.h  sys_config_bk7238.h  (+4 more)
beken378/common/: bk_err.h  bk_log.h  doubly_list.h  error.h  fifo.h  generic.h  include.h  typedef.h
beken378/demo/: ieee802_11_demo.c  ieee802_11_demo.h
beken378/docs/: Makefile
beken378/driver/: driver.c
beken378/func/: func.c
beken378/func/webclient/: CMakeLists.txt  Kconfig  webclient.c  webclient_src.mk  webclient_test.c
beken378/func/webclient/webclient_mod/: CMakeLists.txt  build_webclient_module.sh  webclient_mod.c  webclient_mod_keep_api.c
beken378/ip/: SConscript
beken378/os/: mem_arch.c  str_arch.c
beken378/release/: release.h  sdk_revision.h
beken378/rttos/: mem_arch.c  os_clock.c  str_arch.c  target_util.c
demos/: demos_case.h  demos_config.h  demos_start.c  demos_start.h
demos/bluetooth/: readme.txt
fixes/: blank.c
release/: osk_revision.h
tools/beken_packager/: beken_packager_wrapper  gen_partition
tools/scripts/: build_include.sh  generate_beken_libs.sh  generate_sys_config.bat  generate_sys_config.sh  make_cid_build.sh  make_rev_build.sh  make_sdk.sh
(+1127 files in other folders)
